# Grafos2022

./: .gitignore  CMakeLists.txt  Readme.md  compiler.sh  deepPathTree.dot  exec.txt  graph.dot  in.txt  inTest9.txt  indirectTransitiveClosure.dot  instance.txt  kruskal.dot  main  metrics.txt  out.dot  out.txt  subgraph.txt
grafos/: CMakeLists.txt  config.h.in
grafos/Trabalho2_Grupo27_2022_1/include/: Edge.h  Graph.h  Node.h  PerformanceMetrics.h  config.h
grafos/Trabalho2_Grupo27_2022_1/src/: Graph.cpp  Node.cpp  PerformanceMetrics.cpp  main.cpp
grafos/include/: Dot.h  Edge.h  Graph.h  Node.h  PerformanceMetrics.h  config.h
grafos/src/: Dot.cpp  Graph.cc  Graph.cpp  Node.cc  Node.cpp  PerformanceMetrics.cpp  RanReal_240_1.txt  deepPathTree.dot  example.txt  experimento.txt  graph.dot  graph.dot_kruskal.dot  graph.dot_prim.dot  graph.dotdeepPathTree.dot  in.txt  main  main.cc  main.cpp  out.txt  out_graph.dot  out_graph.dot_kruskal.dot  out_graph.dotdeepPathTree.dot  performance.txt
include/: Edge.h  Node.h
src/: Node.cpp
tests/: CMakeLists.txt  greedyAlgoritmTest.cc  main.cc  test1.cc  test10.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc  test8.cc  test9.cc
